--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 This is a file that tells you any day of the week from the beginning of time.
 
+It's so fun. Please play! 
 
 
 
 
 
-
-copywrite 2015  J and T
+copywrite 2015  Jessica Hori and Tina Ramsey
